Ignore cached api responses for security and a file I need for calling file_get_contents in my dev server

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 # environment variables, e.g. server hostname
 .env
 
+# instance/deployment content
+cache/
+
 # IDE and OS cruft
 .idea/
 .vscode/
 *.swp
 *.swo
 .DS_Store
+
+# john's silly local env setup
+wp-includes/
